--- a/backend/package.json
+++ b/backend/package.json
@@ -1,16 +1,20 @@
 {
-  "name": "greenfield-project",
+  "name": "viny-logger",
   "version": "1.0.0",
   "description": "LP collection app",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon --env-file=.env server",
-    "start": "node --env-file=.env server.js"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon server.js"
   },
-  "author": "",
+  "author": "aademirci",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.0"
   },
   "devDependencies": {
